Work on user endpoint
